--- a/index.html
+++ b/index.html
@@ -3,12 +3,34 @@
 <head>
   <meta charset="utf-8">
   <title>Victims and Volunteers</title>
+
   <link rel="stylesheet" type="text/css" href="http://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.1/normalize.min.css">
   <link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
 	
-  <script src="main.js"></script>
+		<div class="container">
+		<header>
+		<h1>Welcome!</h1>
+		</header>
+		<nav>
+			<ul>
+				<li><a href="home.html">Home</a></li>
+			</ul>
+		</nav>
+		<div class="content">
 
+		<h1>How many people in need?</h1>
+			<form>
+				<input type="text" name="victimsNumber">
+			</form>
+		
+		</div>
+		</div>
+
+
+
+  <script src="main.js"></script>
+  <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
 </body>
 </html>
