Put in dynamic form adding and add next section

--- a/index.html
+++ b/index.html
@@ -18,19 +18,20 @@
 				<li><a href="home.html">Home</a></li>
 			</ul>
 		</nav>
-		<div class="content">
+		<div id="content" class="content">
 
-		<h1>How many people in need?</h1>
-			<form>
-				<input type="text" name="victimsNumber">
-			</form>
-		
+			<h1>How many people in need?</h1>
+			<input id="victimsNumber" type="text" name="victimsNumber"><br><br>
+			<button id="victimsNumber-btn">Go!</button>
+			<br><br><br>
+
 		</div>
 		</div>
 
 
 
-  <script src="main.js"></script>
+ 
   <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
+  <script src="main.js"></script>
 </body>
 </html>
