--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 	
 		<div class="container">
 		<header>
-		<h1>Welcome!</h1>
+		<h1>Volunteer Finder</h1>
 		</header>
 		<nav>
 			<ul>
-				<li><a href="home.html">Home</a></li>
+				<li><a href="index.html">Home</a></li>
 			</ul>
 		</nav>
 		<div id="content" class="content">
